--- a/src/components/SimpleText.css
+++ b/src/components/SimpleText.css
@@ -65,7 +65,7 @@
 }
 .simple-text-message-body-container {
   position: absolute;
-  height: 75%;
+  height: 80%;
   width: 92.79%;
   top: 16.29%;
   left: 4.7%;
@@ -73,6 +73,9 @@
   line-height: 20px;
   color: var(--color-lavender);
   display: inline-block;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 .simple-text {
   position: relative;
@@ -84,13 +87,18 @@
   font-family: var(--font-manrope);
   backdrop-filter: blur(35px);
 }
+span {
+	text-overflow: ellipsis;
+}
 .simple-text-message-body-text {
-	white-space: pre-line;
+	white-space: pre-wrap;
 	position: relative;
 	width: 100%;
 	height: 100%;
 	text-overflow: ellipsis;
+	overflow: hidden;
 	word-wrap: break-word;
+	/* display: inline-block; */
 }
 .simple-text-message-body-text b {
 	background-color: red;
